--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,42 @@
 Source: moxa-uart-control
-Section: utils
 Priority: required
-Maintainer: Elvis CW Yao <ElvisCW.Yao@moxa.com>
-Uploaders: SZ Lin (林上智) <sz.lin@moxa.com>
-Build-Depends: debhelper (>= 10), libjson-c-dev
+Maintainer: Ken CJ Chou <KenCJ.Chou@moxa.com>
+Uploaders: SZ Lin (林上智) <sz.lin@moxa.com>,
+           Elvis CW Yao <ElvisCW.Yao@moxa.com>
+Build-Depends: debhelper (>= 10),
+               dh-exec,
+               libmoxa-gpio-control-dev (>= 1.0.0),
+               libmoxa-errno-dev (>= 1.0.0),
+               libjson-c-dev
 Standards-Version: 4.1.2
-Homepage: http://www.moxa.com/
+Section: libs
+Homepage: https://www.moxa.com/
+
+Package: libmoxa-uart-control1
+Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${shlibs:Depends},
+         ${misc:Depends},
+         libmoxa-gpio-control1 (>= 1.0.0),
+         libjson-c3
+Description: Moxa UART control library - shared library
+ UART control library can control the mode of UART.
+
+Package: libmoxa-uart-control-dev
+Architecture: any
+Multi-Arch: same
+Section: libdevel
+Depends: libmoxa-uart-control1 (= ${binary:Version}),
+         ${misc:Depends}
+Description: Moxa UART control library - development files
+ UART control library can control the mode of UART.
 
 Package: moxa-uart-control
 Architecture: any
-Depends: ${misc:Depends}
-Description: Moxa UART Control Utility
+Section: utils
+Depends: libmoxa-uart-control1 (= ${binary:Version}),
+         ${shlibs:Depends},
+         ${misc:Depends}
+Description: Moxa UART control utility
  Utility to control the mode of UART in Moxa computers
