--- a/example/Makefile
+++ b/example/Makefile
@@ -1,12 +1,8 @@
-CC := gcc
-STRIP := strip
+CC ?= gcc
 
 all:
 	$(CC) -Wall -lmx_uart_ctl uart_set-test.c -o uart_set-test
-	$(STRIP) -s uart_set-test
-
 	$(CC) -Wall -lmx_uart_ctl uart_transmit-test.c -o uart_transmit-test
-	$(STRIP) -s uart_transmit-test
 
 .PHONY: clean
 clean:
