--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ develop_build:
         - dpkg --add-architecture arm64
         - dpkg --add-architecture amd64
         - echo "deb http://mil-internal-apt:8080/mirror-debian_20200211 stretch main" > /etc/apt/sources.list
-        - echo "deb http://mil-internal-apt:8080/mil-develop stretch main" >> /etc/apt/sources.list
+        - echo "deb http://mil-internal-apt:8080/mil-internal-release stretch main" >> /etc/apt/sources.list
         - curl -fsSL http://mil-internal-apt:8080/mil_internal_apt.gpg | apt-key add -
         - apt-get update
         - apt-get install --allow-unauthenticated -y
